Fix messages and realign icons

--- a/src/assets/scss/paper-kit/_footers.scss
+++ b/src/assets/scss/paper-kit/_footers.scss
@@ -52,8 +52,15 @@
     line-height: $line-height;
 
     .footer-icon {
-        width: 25px;
-        height: 25px;
+        width: 15px;
+        height: 15px;
+    }
+
+    @media only screen and (min-device-width: 600px) {
+        .footer-icon {
+            width: 25px;
+            height: 25px;
+        }
     }
 
     &.footer-black{
